<resources>
    <string name="app_name">Icacoe</string>
    <string name="description_text">A Tic Tac Toe Example</string>
    <string name="player_option_text">Choose who goes first</string>
    <string name="title_scores">Scores</string>

    <string name="X">X</string>
    <string name="O">O</string>

    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="finish">Finish</string>
    <string name="start">Start Game</string>
    <string name="reset_text">Back Home</string>
    <string name="view_score">View Score</string>
    <string name="continue_text">Continue</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>