<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="io.ere.icacoe.kotlin.views.home.HomeFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment"
            app:enterAnim="@anim/slide_in"
            app:popEnterAnim="@anim/slide_in" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="io.ere.icacoe.kotlin.views.game.GameFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_game">
        <action
            android:id="@+id/action_SecondFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment"
            app:enterAnim="@anim/slide_in"
            app:popEnterAnim="@anim/slide_in" />
    </fragment>
    <fragment
        android:id="@+id/ThirdFragment"
        android:name="io.ere.icacoe.kotlin.views.score.ScoreFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_score">
        <action
            android:id="@+id/action_ThirdFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:enterAnim="@anim/slide_in"
            app:popEnterAnim="@anim/slide_in" />
    </fragment>
</navigation>